Added terraform code

--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,6 @@ test.*
 terraform/.terraform/
 terraform/.terraform.lock.hcl
 terraform/terraform.tfstate.backup
+terraform/.terraform.tfstate.lock.info
 
 docker/
