--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ logs/
 test.*
 
 terraform/.terraform/
+terraform/terraform.tfstate
 terraform/.terraform.lock.hcl
 terraform/terraform.tfstate.backup
 terraform/.terraform.tfstate.lock.info
