--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ autopep8==1.6.0
 certifi==2022.6.15
 chardet==4.0.0
 charset-normalizer==2.1.0
+discord-webhook==0.16.3
 discord.py==1.7.3
 flake8==4.0.1
 idna==3.3
